--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi
-requests
+fastapi~=0.103.0
+requests~=2.31.0
 langchain==0.0.275
 openai
 uvicorn
 #pdf 解析类库
 pymupdf
-pyyaml
+pyyaml~=6.0.1
+SQLAlchemy~=2.0.20
+pymysql
