--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 fastapi~=0.103.0
 requests~=2.31.0
-langchain==0.0.275
-openai
+langchain==0.0.279
+openai==0.28.0
 uvicorn
 #pdf 解析类库
-pymupdf
+pymupdf==1.23.3
 pyyaml~=6.0.1
 SQLAlchemy~=2.0.20
 pymysql
